@@ -1,3 +1,7 @@
+2011-03-19  Kostas Nakos  <knakos@gmail.com>
+* android/*: Map dpad-center to Atari's escape key,
+             fix a couple of races when restarting, pausing/resuming the audio
+
 2011-03-06  Kostas Nakos  <knakos@gmail.com>
 * atari.[ch], android/*: Implemented autoframeskip functionality
 * android/*: Added .com & .exe to supported extensions,
